# glfw-boilerplate

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.cpp
